--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -257,12 +257,19 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     _onInput(e) {
+      if (this._preventIEInput) {
+        e.stopImmediatePropagation();
+        this._preventIEInput = false;
+        return;
+      }
+
       if (this.preventInvalidInput) {
         const input = this.focusElement;
         if (input.value.length > 0 && !this.checkValidity()) {
           input.value = this.value || '';
         }
       }
+
       this._changeDispatchedByTimeout = false;
       if (this.commitOnTimeout) {
         this._clearCommitTimeout();
@@ -379,11 +386,7 @@ This program is available under Apache License Version 2.0, available at https:/
       // - focus or blur, when placeholder attribute is set
       // - placeholder attribute value changed
       // https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/101220/
-      const prevent = e => {
-        e.stopImmediatePropagation();
-        this.focusElement.removeEventListener('input', prevent);
-      };
-      const shouldPreventInput = () => this.placeholder && this.focusElement.addEventListener('input', prevent);
+      const shouldPreventInput = () => this.placeholder && (this._preventIEInput = true);
       this.focusElement.addEventListener('focusin', shouldPreventInput);
       this.focusElement.addEventListener('focusout', shouldPreventInput);
       this._createPropertyObserver('placeholder', shouldPreventInput);
