Add clear button demos

--- a/demo/password-field-demos.html
+++ b/demo/password-field-demos.html
@@ -24,6 +24,14 @@
       </template>
     </vaadin-demo-snippet>
 
+    <h3>Display the Clear Button</h3>
+    <p>Use the <code>clear-button-visible</code> attribute to display the clear button of an individual password field.</p>
+    <vaadin-demo-snippet id="password-field-demos-password-field-with-clear-button">
+      <template preserve-content>
+        <vaadin-password-field label="Password" value="secret1" clear-button-visible></vaadin-password-field>
+      </template>
+    </vaadin-demo-snippet>
+
     <p>Use CSS to hide the reveal button across the whole application.</p>
     <vaadin-demo-snippet id="password-field-demos-password-field-hide-reveal-button">
       <template preserve-content>
