--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -47,7 +47,7 @@ This program is available under Apache License Version 2.0, available at https:/
           aria-invalid$="[[invalid]]"
         >
 
-        <div part="clear-button" slot="suffix" id="clearButton" role="button" aria-label="Clear" hidden$=[[!clearButtonVisible]]></div>
+        <div part="clear-button" id="clearButton" role="button" aria-label="Clear" hidden$=[[!clearButtonVisible]]></div>
         <slot name="suffix"></slot>
 
       </div>
