--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -40,7 +40,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
     <div class="vaadin-text-area-container">
 
-      <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
+      <label part="label" on-click="focus">[[label]]</label>
 
       <div part="input-field">
 
