--- a/test/number-field.html
+++ b/test/number-field.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>vaadin-number-field tests</title>
   <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../test-fixture/test-fixture.html">  
   <link rel="import" href="../vaadin-number-field.html">
   <link rel="import" href="../../iron-form/iron-form.html">
 </head>
