--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -33,6 +33,9 @@
       }
 
       [part="value"],
+      [part="input-field"] ::slotted(input),
+      [part="input-field"] ::slotted(textarea),
+      /* Slotted by vaadin-select-text-field */
       [part="input-field"] ::slotted([part="value"]) {
         cursor: inherit;
         min-height: var(--lumo-text-field-size);
@@ -41,7 +44,9 @@
         -webkit-mask-image: var(--_lumo-text-field-overflow-mask-image);
       }
 
-      [part="value"]:focus {
+      [part="value"]:focus,
+      [part="input-field"] ::slotted(input):focus,
+      [part="input-field"] ::slotted(textarea):focus {
         -webkit-mask-image: none;
         mask-image: none;
       }
@@ -52,29 +57,35 @@
       */
       @-moz-document url-prefix() {
         [part="value"],
+        [part="input-field"] ::slotted(input),
+        [part="input-field"] ::slotted(textarea),
         [part="input-field"] ::slotted([part="value"]) {
           mask-image: var(--_lumo-text-field-overflow-mask-image);
         }
       }
 
-      [part="value"]::-webkit-input-placeholder {
+      [part="value"]::-webkit-input-placeholder,
+      [part="input-field"] ::slotted(*)::-webkit-input-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      [part="value"]:-ms-input-placeholder {
+      [part="value"]:-ms-input-placeholder,
+      [part="input-field"] ::slotted(*)::-ms-input-placeholder {
         color: inherit;
         opacity: 0.5;
       }
 
-      [part="value"]::-moz-placeholder {
+      [part="value"]::-moz-placeholder,
+      [part="input-field"] ::slotted(*)::-moz-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      [part="value"]::placeholder {
+      [part="value"]::placeholder,
+      [part="input-field"] ::slotted(*)::placeholder {
         color: inherit;
         transition: opacity 0.175s 0.1s;
         opacity: 0.5;
@@ -146,22 +157,30 @@
 
       /* Read-only and disabled */
       :host([readonly]) [part="value"]::-webkit-input-placeholder,
-      :host([disabled]) [part="value"]::-webkit-input-placeholder {
+      :host([disabled]) [part="value"]::-webkit-input-placeholder,
+      :host([readonly]) ::slotted(*)::-webkit-input-placeholder,
+      :host([disabled]) ::slotted(*)::-webkit-input-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]:-ms-input-placeholder,
-      :host([disabled]) [part="value"]:-ms-input-placeholder {
+      :host([disabled]) [part="value"]:-ms-input-placeholder,
+      :host([readonly]) ::slotted(*)::-ms-input-placeholder,
+      :host([disabled]) ::slotted(*)::-ms-input-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]::-moz-placeholder,
-      :host([disabled]) [part="value"]::-moz-placeholder {
+      :host([disabled]) [part="value"]::-moz-placeholder,
+      :host([readonly]) ::slotted(*)::-moz-placeholder,
+      :host([disabled]) ::slotted(*)::-moz-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]::placeholder,
-      :host([disabled]) [part="value"]::placeholder {
+      :host([disabled]) [part="value"]::placeholder,
+      :host([readonly]) ::slotted(*)::placeholder,
+      :host([disabled]) ::slotted(*)::placeholder {
         opacity: 0;
       }
 
@@ -246,7 +265,7 @@
 
       /* Slotted content */
 
-      [part="input-field"] ::slotted(:not([part]):not(iron-icon)) {
+      [part="input-field"] ::slotted(:not([part]):not(iron-icon):not(input):not(textarea)) {
         color: var(--lumo-secondary-text-color);
         font-weight: 400;
       }
