--- a/test/text-area.html
+++ b/test/text-area.html
@@ -140,37 +140,31 @@
     describe('vaadin-text-area-appear', () => {
       let textArea;
 
-      function repeatStringTimes(str, num) {
-        let combinedString = '';
-        while (num > 0) {
-          combinedString += str;
-          num --;
-        }
-        return combinedString;
-      }
-
       beforeEach(() => textArea = fixture('default'));
 
-      it('should update height based on the content each time text area changing the display state', done => {
-        let i = 1, savedHeight = 0;
-
-        const updateContentInterval = setInterval(() => {
-          // Should check the saved height with the next interval to be sure `animationend` was already fired.
-          expect(savedHeight).to.be.below(textArea.clientHeight);
-          savedHeight = textArea.clientHeight;
-          textArea.hidden = true;
-          // Three new lines will expand initial height
-          textArea.value = repeatStringTimes('\n\n\n', i);
-          textArea.hidden = false;
-          i ++;
-          // Add content 3 times and check the size
-          if (i === 3) {
-            clearInterval(updateContentInterval);
-            done();
-          }
-        }, 250);
+      it('should update height on show after hidden', done => {
+        const savedHeight = textArea.clientHeight;
+        textArea.hidden = true;
+        // Three new lines will expand initial height
+        textArea.value = '\n\n\n';
+        textArea.addEventListener('animationend', e => {
+          expect(textArea.clientHeight).to.be.above(savedHeight);
+          done();
+        });
+        textArea.hidden = false;
       });
 
+      it('should not update height on custom animation name', done => {
+        const spy = sinon.spy(textArea, '_updateHeight');
+        textArea.addEventListener('animationend', e => {
+          expect(spy.called).to.be.false;
+          done();
+        });
+
+        const ev = new Event('animationend');
+        ev.animationName = 'foo';
+        textArea.dispatchEvent(ev);
+      });
     });
 
     describe('multi-line', () => {
