Add slotted input implementation

--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -52,6 +52,22 @@ This program is available under Apache License Version 2.0, available at https:/
        * </vaadin-password-field>
        * ```
        *
+       * ### Custom input
+       *
+       * It is possible to use custom input within `<vaadin-password-field>`.
+       * In order for an input to be considered as a custom input, it must have the slot
+       * attribute set to `input`.
+       *
+       * **NOTE:** when using custom input: all properties and attributes that the
+       * `<vaadin-password-field>` has should be defined on the host element. They will be
+       * automatically propagated to the custom input.
+       *
+       * ```html
+       * <vaadin-password-field label="Password">
+       *   <input type="password" slot="input">
+       * </vaadin-password-field>
+       * ```
+       *
        * ### Styling
        *
        * See vaadin-text-field.html for the styling documentation
@@ -141,6 +157,10 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _onChange(e) {
+          const slotted = this.querySelector(`${this._slottedTagName}[slot="${this._slottedTagName}"]`);
+          if (slotted) {
+            e.stopPropagation();
+          }
           if (this._passwordVisibilityChanging) {
             this._cachedChangeEvent = e;
           } else {
