--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -56,26 +56,9 @@ This program is available under Apache License Version 2.0, available at https:/
 
         <slot name="prefix"></slot>
 
-        <textarea part="value"
-            autocomplete$="[[autocomplete]]"
-            autocorrect$="[[autocorrect]]"
-            autocapitalize$="[[autocapitalize]]"
-            autofocus$="[[autofocus]]"
-            disabled$="[[disabled]]"
-            maxlength$="[[maxlength]]"
-            minlength$="[[minlength]]"
-            placeholder$="[[placeholder]]"
-            readonly$="[[readonly]]"
-            aria-readonly$="[[readonly]]"
-            required$="[[required]]"
-            aria-required$="[[required]]"
-            value="{{value::input}}"
-            on-blur="validate"
-            on-input="_onInput"
-            on-change="_onChange"
-            aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
-            aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
-            aria-invalid$="[[invalid]]"></textarea>
+        <slot name="textarea">
+          <textarea part="value"></textarea>
+        </slot>
 
         <div part="clear-button" id="clearButton" role="button" aria-label="Clear"></div>
         <slot name="suffix"></slot>
@@ -113,6 +96,22 @@ This program is available under Apache License Version 2.0, available at https:/
        * <vaadin-text-area label="Add description">
        *   <div slot="prefix">Details:</div>
        *   <div slot="suffix">The end!</div>
+       * </vaadin-text-area>
+       * ```
+       *
+       * ### Custom textarea
+       *
+       * It is possible to use custom textarea within `<vaadin-text-area>`.
+       * In order for an textarea to be considered as a custom textarea, it must have the slot
+       * attribute set to `textarea`.
+       *
+       * **NOTE:** when using custom textarea: all properties and attributes that the
+       * `<vaadin-text-area>` has should be defined on the host element. They will be
+       * automatically propagated to the custom textarea.
+       *
+       * ```html
+       * <vaadin-text-area label="Textarea">
+       *   <textarea slot="textarea"></textarea>
        * </vaadin-text-area>
        * ```
        *
@@ -171,6 +170,10 @@ This program is available under Apache License Version 2.0, available at https:/
           if (e.animationName.indexOf('vaadin-text-area-appear') === 0) {
             this._updateHeight();
           }
+        }
+
+        get _slottedTagName() {
+          return 'textarea';
         }
 
         _textAreaValueChanged(value) {
