Use focusout instead of blur for cached change event dispatching (#286)

--- a/test/password-field.html
+++ b/test/password-field.html
@@ -46,7 +46,7 @@
           revealButton.click();
           expect(input.type).to.equal('text');
 
-          passwordField.dispatchEvent(new Event('blur'));
+          passwordField.dispatchEvent(new Event('focusout'));
           expect(input.type).to.equal('password');
         });
 
@@ -56,7 +56,7 @@
           function blurField() {
             input.blur();
             passwordField.dispatchEvent(new CustomEvent('blur'));
-
+            passwordField.dispatchEvent(new CustomEvent('focusout'));
           }
 
           beforeEach(() => {
