--- a/demo/text-field-custom-demos.html
+++ b/demo/text-field-custom-demos.html
@@ -6,6 +6,26 @@
       }
     </style>
 
+    <h3>Custom Input</h3>
+    <p>
+      <b>Note:</b> In order to apply lumo or material theme styles to the placeholder
+      of the slotted input you should explicitly import a file
+      `theme/lumo/vaadin-placeholder-styles.html` or `theme/material/vaadin-placeholder-styles.html`
+      and include styles into the same scope as `vaadin-text-field`:
+      <code>&lt;custom-style&gt;&lt;style include="lumo-placeholder-styles"&gt;&lt;/style&gt;&lt;/custom-style&gt;</code> OR 
+      <code>&lt;custom-style&gt;&lt;style include="material-placeholder-styles"&gt;&lt;/style&gt;&lt;/custom-style&gt;</code>
+    </p>
+    <vaadin-demo-snippet id="text-field-custom-demos-phone">
+      <template preserve-content>
+        <custom-style>
+          <style include="lumo-placeholder-styles"></style>
+        </custom-style>
+        <vaadin-text-field label="Name">
+          <input type="text" slot="input">
+        </vaadin-text-field>
+      </template>
+    </vaadin-demo-snippet>
+
     <h3>Number Input</h3>
     <p>
       <b>Note:</b> All properties and attributes that `vaadin-text-field` has should be defined on the host.
@@ -23,15 +43,6 @@
       <template preserve-content>
         <vaadin-text-field label="Email" required error-message="Please enter valid email"  pattern="^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$">
           <input type="email" slot="input">
-        </vaadin-text-field>
-      </template>
-    </vaadin-demo-snippet>
-
-    <h3>Phone Input</h3>
-    <vaadin-demo-snippet id="text-field-custom-demos-phone">
-      <template preserve-content>
-        <vaadin-text-field label="Phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Format: 111-222-3333">
-          <input type="tel" slot="input">
         </vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
