--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -64,28 +64,24 @@
         }
       }
 
-      [part="value"]::-webkit-input-placeholder,
-      [part="input-field"] ::slotted(*)::-webkit-input-placeholder {
+      [part="value"]::-webkit-input-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      [part="value"]:-ms-input-placeholder,
-      [part="input-field"] ::slotted(*)::-ms-input-placeholder {
+      [part="value"]:-ms-input-placeholder {
         color: inherit;
         opacity: 0.5;
       }
 
-      [part="value"]::-moz-placeholder,
-      [part="input-field"] ::slotted(*)::-moz-placeholder {
+      [part="value"]::-moz-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      [part="value"]::placeholder,
-      [part="input-field"] ::slotted(*)::placeholder {
+      [part="value"]::placeholder {
         color: inherit;
         transition: opacity 0.175s 0.1s;
         opacity: 0.5;
@@ -157,30 +153,22 @@
 
       /* Read-only and disabled */
       :host([readonly]) [part="value"]::-webkit-input-placeholder,
-      :host([disabled]) [part="value"]::-webkit-input-placeholder,
-      :host([readonly]) ::slotted(*)::-webkit-input-placeholder,
-      :host([disabled]) ::slotted(*)::-webkit-input-placeholder {
+      :host([disabled]) [part="value"]::-webkit-input-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]:-ms-input-placeholder,
-      :host([disabled]) [part="value"]:-ms-input-placeholder,
-      :host([readonly]) ::slotted(*)::-ms-input-placeholder,
-      :host([disabled]) ::slotted(*)::-ms-input-placeholder {
+      :host([disabled]) [part="value"]:-ms-input-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]::-moz-placeholder,
-      :host([disabled]) [part="value"]::-moz-placeholder,
-      :host([readonly]) ::slotted(*)::-moz-placeholder,
-      :host([disabled]) ::slotted(*)::-moz-placeholder {
+      :host([disabled]) [part="value"]::-moz-placeholder {
         opacity: 0;
       }
 
       :host([readonly]) [part="value"]::placeholder,
-      :host([disabled]) [part="value"]::placeholder,
-      :host([readonly]) ::slotted(*)::placeholder,
-      :host([disabled]) ::slotted(*)::placeholder {
+      :host([disabled]) [part="value"]::placeholder {
         opacity: 0;
       }
 
