--- a/theme/material/vaadin-text-field-styles.html
+++ b/theme/material/vaadin-text-field-styles.html
@@ -106,53 +106,45 @@
 
       /* TODO: the text opacity should be 42%, but the disabled style is 38%.
       Would need to introduce another property for it if we want to be 100% accurate. */
-      [part="value"]::-webkit-input-placeholder,
-      [part="input-field"] ::slotted(*)::-webkit-input-placeholder {
+      [part="value"]::-webkit-input-placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.05s;
         opacity: 1;
       }
 
-      [part="value"]:-ms-input-placeholder,
-      [part="input-field"] ::slotted(*):-ms-input-placeholder {
+      [part="value"]:-ms-input-placeholder {
         color: var(--material-disabled-text-color);
       }
 
-      [part="value"]::-moz-placeholder,
-      [part="input-field"] ::slotted(*)::-moz-placeholder {
+      [part="value"]::-moz-placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.05s;
         opacity: 1;
       }
 
-      [part="value"]::placeholder,
-      [part="input-field"] ::slotted(*)::placeholder {
+      [part="value"]::placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.1s;
         opacity: 1;
       }
 
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::-webkit-input-placeholder,
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) ::slotted(*)::-webkit-input-placeholder {
+      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::-webkit-input-placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::-moz-placeholder,
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) ::slotted(*)::-moz-placeholder {
+      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::-moz-placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::placeholder,
-      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) ::slotted(*)::placeholder {
+      :host([has-label]:not([focused]):not([invalid]):not([theme="always-float-label"])) [part="value"]::placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
       /* IE11 doesn’t show the placeholder when the input is focused, so it’s basically useless for this theme */
-      :host([has-label]) [part="value"]:-ms-input-placeholder,
-      :host([has-label]) ::slotted(*):-ms-input-placeholder {
+      :host([has-label]) [part="value"]:-ms-input-placeholder {
         opacity: 0;
       }
 
