Remove vaadin field specific selectors from placeholder styles

--- a/theme/material/vaadin-placeholder-styles.html
+++ b/theme/material/vaadin-placeholder-styles.html
@@ -3,61 +3,53 @@
 <dom-module id="material-placeholder-styles">
   <template>
     <style>
-      vaadin-text-field > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-password-field > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-webkit-input-placeholder {
+      input[slot="input"]::-webkit-input-placeholder,
+      textarea[slot="textarea"]::-webkit-input-placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.05s;
         opacity: 1;
       }
 
-      vaadin-text-field > input[slot="input"]::-ms-input-placeholder,
-      vaadin-password-field > input[slot="input"]::-ms-input-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-ms-input-placeholder {
+      input[slot="input"]::-ms-input-placeholder,
+      textarea[slot="textarea"]::-ms-input-placeholder {
         color: var(--material-disabled-text-color);
       }
 
-      vaadin-text-field > input[slot="input"]::-moz-placeholder,
-      vaadin-password-field > input[slot="input"]::-moz-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-moz-placeholder {
+      input[slot="input"]::-moz-placeholder,
+      textarea[slot="textarea"]::-moz-placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.05s;
         opacity: 1;
       }
 
-      vaadin-text-field > input[slot="input"]::placeholder,
-      vaadin-password-field > input[slot="input"]::placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::placeholder {
+      input[slot="input"]::placeholder,
+      textarea[slot="textarea"]::placeholder {
         color: var(--material-disabled-text-color);
         transition: opacity 0.175s 0.1s;
         opacity: 1;
       }
 
-      vaadin-text-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-password-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-text-area[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::-webkit-input-placeholder {
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-webkit-input-placeholder,
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::-webkit-input-placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
-      vaadin-text-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-moz-placeholder,
-      vaadin-password-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-moz-placeholder,
-      vaadin-text-area[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::-moz-placeholder {
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::-moz-placeholder,
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::-moz-placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
-      vaadin-text-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::placeholder,
-      vaadin-password-field[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::placeholder,
-      vaadin-text-area[has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::placeholder {
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="input"]::placeholder,
+      [has-label]:not([focused]):not([invalid]):not([theme="always-float-label"]) > input[slot="textarea"]::placeholder {
         opacity: 0;
         transition-delay: 0;
       }
 
       /* IE11 doesn’t show the placeholder when the input is focused, so it’s basically useless for this theme */
-      vaadin-text-field[has-label] > input[slot="input"]:-ms-input-placeholder,
-      vaadin-password-field[has-label] > input[slot="input"]:-ms-input-placeholder,
-      vaadin-text-area[has-label] > input[slot="textarea"]:-ms-input-placeholder {
+      [has-label] > input[slot="input"]:-ms-input-placeholder,
+      [has-label] > input[slot="textarea"]:-ms-input-placeholder {
         opacity: 0;
       }
     </style>
