--- a/theme/lumo/vaadin-placeholder-styles.html
+++ b/theme/lumo/vaadin-placeholder-styles.html
@@ -1,71 +1,59 @@
 <dom-module id="lumo-placeholder-styles">
   <template>
     <style>
-      vaadin-text-field > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-password-field > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-webkit-input-placeholder {
+      input[slot="input"]::-webkit-input-placeholder,
+      textarea[slot="textarea"]::-webkit-input-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      vaadin-text-field > input[slot="input"]::-ms-input-placeholder,
-      vaadin-password-field > input[slot="input"]::-ms-input-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-ms-input-placeholder {
+      input[slot="input"]::-ms-input-placeholder,
+      textarea[slot="textarea"]::-ms-input-placeholder {
         color: inherit;
         opacity: 0.5;
       }
 
-      vaadin-text-field > input[slot="input"]::-moz-placeholder,
-      vaadin-password-field > input[slot="input"]::-moz-placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::-moz-placeholder {
+      input[slot="input"]::-moz-placeholder,
+      textarea[slot="textarea"]::-moz-placeholder {
         color: inherit;
         transition: opacity 0.175s 0.05s;
         opacity: 0.5;
       }
 
-      vaadin-text-field > input[slot="input"]::placeholder,
-      vaadin-password-field > input[slot="input"]::placeholder,
-      vaadin-text-area > textarea[slot="textarea"]::placeholder {
+      input[slot="input"]::placeholder,
+      textarea[slot="textarea"]::placeholder {
         color: inherit;
         transition: opacity 0.175s 0.1s;
         opacity: 0.5;
       }
 
       /* Read-only and disabled */
-      vaadin-text-field[readonly] > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-password-field[readonly] > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-text-area[readonly] > textarea[slot="textarea"]::-webkit-input-placeholder,
-      vaadin-text-field[disabled] > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-password-field[disabled] > input[slot="input"]::-webkit-input-placeholder,
-      vaadin-text-area[disabled] > textarea[slot="textarea"]::-webkit-input-placeholder {
+      [readonly] > input[slot="input"]::-webkit-input-placeholder,
+      [readonly] > textarea[slot="textarea"]::-webkit-input-placeholder,
+      [disabled] > input[slot="input"]::-webkit-input-placeholder,
+      [disabled] > textarea[slot="textarea"]::-webkit-input-placeholder {
         opacity: 0;
       }
 
-      vaadin-text-field[readonly] > input[slot="input"]::-ms-input-placeholder,
-      vaadin-password-field[readonly] > input[slot="input"]::-ms-input-placeholder,
-      vaadin-text-area[readonly] > textarea[slot="textarea"]::-ms-input-placeholder,
-      vaadin-text-field[disabled] > input[slot="input"]::-ms-input-placeholder,
-      vaadin-password-field[disabled] > input[slot="input"]::-ms-input-placeholder,
-      vaadin-text-area[disabled] > textarea[slot="textarea"]::-ms-input-placeholder {
+      [readonly] > input[slot="input"]::-ms-input-placeholder,
+      [readonly] > textarea[slot="textarea"]::-ms-input-placeholder,
+      [disabled] > input[slot="input"]::-ms-input-placeholder,
+      [disabled] > textarea[slot="textarea"]::-ms-input-placeholder {
         opacity: 0;
       }
 
-      vaadin-text-field[readonly] > input[slot="input"]::-moz-placeholder,
-      vaadin-password-field[readonly] > input[slot="input"]::-moz-placeholder,
-      vaadin-text-area[readonly] > textarea[slot="textarea"]::-moz-placeholder,
-      vaadin-text-field[disabled] > input[slot="input"]::-moz-placeholder,
-      vaadin-password-field[disabled] > input[slot="input"]::-moz-placeholder,
-      vaadin-text-area[disabled] > textarea[slot="textarea"]::-moz-placeholder {
+      [readonly] > input[slot="input"]::-moz-placeholder,
+      [readonly] > textarea[slot="textarea"]::-moz-placeholder,
+      [disabled] > input[slot="input"]::-moz-placeholder,
+      [disabled] > textarea[slot="textarea"]::-moz-placeholder {
         opacity: 0;
       }
 
-      vaadin-text-field[readonly] > input[slot="input"]::placeholder,
-      vaadin-password-field[readonly] > input[slot="input"]::placeholder,
-      vaadin-text-area[readonly] > textarea[slot="textarea"]::placeholder,
-      vaadin-text-field[disabled] > input[slot="input"]::placeholder,
-      vaadin-password-field[disabled] > input[slot="input"]::placeholder,
-      vaadin-text-area[disabled] > textarea[slot="textarea"]::placeholder {
+      [readonly] > input[slot="input"]::placeholder,
+      [readonly] > textarea[slot="textarea"]::placeholder,
+      [disabled] > input[slot="input"]::placeholder,
+      [disabled] > textarea[slot="textarea"]::placeholder {
         opacity: 0;
       }
     </style>
